dbn_dijkstra.ipynb

--- a/dbn_dijkstra.ipynb
+++ b/dbn_dijkstra.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"dijstra algorithm\"\"\"\n",
+    "def dijkstra(start):\n",
+    "    \"\"\"시작노드를 초기화한다.\"\"\"\n",
+    "    distance[start] = 0\n",
+    "    visited[start] = True\n",
+    "    \n",
+    "    for j in graph_dict[start]:\n",
+    "        distance[j[0]] = j[1]\n",
+    "        \n",
+    "    \"\"\"시작노드를 제외한 다른 모든 n-1개의 노드에 대해 반복한다.\"\"\"\n",
+    "    for i in range(n-1):\n",
+    "        \"\"\"현재 최단거리가 가장 짧은 node에 대해 방문처리한다.\"\"\"\n",
+    "        now = get_smallest_node()\n",
+    "        visited[now] = True\n",
+    "        \n",
+    "        \"\"\"만약 이동할수 있는 인접노드가 없는 경우에는 건너뛴다.\"\"\"\n",
+    "        if now not in graph_dict.keys():\n",
+    "            continue\n",
+    "        else:\n",
+    "            \"\"\"현재노드와 연결된 다른 노드들 확인\"\"\"\n",
+    "            for j in graph_dict[now]:\n",
+    "                cost = distance[now] + j[1]\n",
+    "                \"\"\"현재노드를 거쳐서 다른노드로의 이동거리가 최단거리테이블에 저장된 거리보다 짧은 경우에 최단거리테이블을 갱신한다.\"\"\"\n",
+    "                if cost < distance[j[0]]:\n",
+    "                    distance[j[0]] = cost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -159,8 +192,8 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32me:\\BAEKJOON_072723\\dbn_dijkstra.ipynb Cell 15\u001b[0m line \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_dijkstra.ipynb#X12sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m\"\"\"dijkstra algorithm 수행한다.\"\"\"\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_dijkstra.ipynb#X12sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m dijkstra(start)\n",
-      "\u001b[1;32me:\\BAEKJOON_072723\\dbn_dijkstra.ipynb Cell 15\u001b[0m line \u001b[0;36mdijkstra\u001b[1;34m(start)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_dijkstra.ipynb#X12sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m visited[now] \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_dijkstra.ipynb#X12sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m \u001b[39m\"\"\"현재노드와 연결된 다른 노드들 확인\"\"\"\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_dijkstra.ipynb#X12sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m \u001b[39mfor\u001b[39;00m j \u001b[39min\u001b[39;00m graph_dict[now]:\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_dijkstra.ipynb#X12sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m     cost \u001b[39m=\u001b[39m distance[now] \u001b[39m+\u001b[39m j[\u001b[39m1\u001b[39m]\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_dijkstra.ipynb#X12sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m     \u001b[39m\"\"\"현재노드를 거쳐서 다른노드로의 이동거리가 최단거리테이블에 저장된 거리보다 짧은 경우에 최단거리테이블을 갱신한다.\"\"\"\u001b[39;00m\n",
+      "\u001b[1;32me:\\BAEKJOON_072723\\dbn_dijkstra.ipynb Cell 8\u001b[0m line \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_dijkstra.ipynb#X12sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m\"\"\"dijkstra algorithm 수행한다.\"\"\"\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_dijkstra.ipynb#X12sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m dijkstra(start)\n",
+      "\u001b[1;32me:\\BAEKJOON_072723\\dbn_dijkstra.ipynb Cell 8\u001b[0m line \u001b[0;36mdijkstra\u001b[1;34m(start)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_dijkstra.ipynb#X12sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m visited[now] \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_dijkstra.ipynb#X12sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m \u001b[39m\"\"\"현재노드와 연결된 다른 노드들 확인\"\"\"\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_dijkstra.ipynb#X12sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m \u001b[39mfor\u001b[39;00m j \u001b[39min\u001b[39;00m graph_dict[now]:\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_dijkstra.ipynb#X12sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m     cost \u001b[39m=\u001b[39m distance[now] \u001b[39m+\u001b[39m j[\u001b[39m1\u001b[39m]\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_dijkstra.ipynb#X12sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m     \u001b[39m\"\"\"현재노드를 거쳐서 다른노드로의 이동거리가 최단거리테이블에 저장된 거리보다 짧은 경우에 최단거리테이블을 갱신한다.\"\"\"\u001b[39;00m\n",
       "\u001b[1;31mKeyError\u001b[0m: 6"
      ]
     }
@@ -172,35 +205,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(3, 5)\n",
-      "(4, 1)\n",
-      "(2, 2)\n"
-     ]
-    }
-   ],
-   "source": [
-    "for j in graph_dict[1]:\n",
-    "    print(j)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1000000000, 0, 2, 5, 1, 1000000000, 1000000000]\n",
-      "[True, True, False, False, False, False, False]\n"
+      "[1000000000, 0, 2, 3, 1, 2, 4]\n",
+      "[False, True, True, True, True, True, True]\n"
      ]
     }
    ],
