dbn_dijkstra.ipynb

--- a/dbn_dijkstra.ipynb
+++ b/dbn_dijkstra.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
        "'\\nfor _ in range(m):\\n    a, b, c = map(int, input.readline().rstrip().split())\\n    graph[a].append((b, c))\\n    \\nfor row in graph:\\n    print(row)\\n'"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 158,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,12 +184,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 168,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 2, 5, 1, 2, 4]"
+      ]
+     },
+     "execution_count": 168,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\"dijkstra algorithm 수행한다.\"\"\"\n",
-    "dijkstra(start)"
+    "shortest_path = dijkstra(start)[1:]"
    ]
   },
   {
