--- a/dbn_dijkstra.ipynb
+++ b/dbn_dijkstra.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
        "'\\nfor _ in range(m):\\n    a, b, c = map(int, input.readline().rstrip().split())\\n    graph[a].append((b, c))\\n    \\nfor row in graph:\\n    print(row)\\n'"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 171,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,23 +184,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[0, 2, 5, 1, 2, 4]"
-      ]
-     },
-     "execution_count": 168,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   1  2  3  4  5  6\n",
+      "0  0  2  5  1  2  4\n"
+     ]
     }
    ],
    "source": [
+    "import pandas as pd\n",
+    "\n",
     "\"\"\"dijkstra algorithm 수행한다.\"\"\"\n",
-    "shortest_path = dijkstra(start)[1:]"
+    "shortest_path = dijkstra(start)[1:]\n",
+    "\n",
+    "shortest_paht_df = pd.DataFrame(data=shortest_path, index=range(1, 7)).T\n",
+    "print(shortest_paht_df)"
    ]
   },
   {
