dbn_dijkstra_city.ipynb

--- a/dbn_dijkstra.ipynb
+++ b/dbn_dijkstra.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +192,7 @@
      "output_type": "stream",
      "text": [
       "   1  2  3  4  5  6\n",
-      "0  0  2  5  1  2  4\n"
+      "0  0  2  3  1  2  4\n"
      ]
     }
    ],
@@ -202,13 +202,13 @@
     "\"\"\"dijkstra algorithm 수행한다.\"\"\"\n",
     "shortest_path = dijkstra(start)[1:]\n",
     "\n",
-    "shortest_paht_df = pd.DataFrame(data=shortest_path, index=range(1, 7)).T\n",
+    "shortest_path_df = pd.DataFrame(data=shortest_path, index=range(1, 7)).T\n",
     "print(shortest_paht_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
