--- a/dbn_dijkstra_city.ipynb
+++ b/dbn_dijkstra_city.ipynb
@@ -2,10 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n : 3,  m : 2,  c : 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "input = open(\"data/dbn_dijkstra_city.txt\", \"r\")\n",
+    "n, m, c = input.readline().rstrip().split()\n",
+    "print(f\"n : {n},  m : {m},  c : {c}\")      # n : number of city,  m : number of edges,  c : start city number"
+   ]
   }
  ],
  "metadata": {
@@ -15,7 +27,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.12"
   }
  },
