dbn_dijkstra_city.ipynb

--- a/dbn_dijkstra_city.ipynb
+++ b/dbn_dijkstra_city.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -17,6 +17,32 @@
     "input = open(\"data/dbn_dijkstra_city.txt\", \"r\")\n",
     "n, m, c = input.readline().rstrip().split()\n",
     "print(f\"n : {n},  m : {m},  c : {c}\")      # n : number of city,  m : number of edges,  c : start city number"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 : [(2, 4), (3, 2)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "graph_dict = {}\n",
+    "for i in input.readlines():\n",
+    "    a, b, c = map(int, i.split())\n",
+    "    if a not in graph_dict.keys():\n",
+    "        graph_dict[a] = [(b, c)]\n",
+    "    else:\n",
+    "        graph_dict[a].append((b, c))\n",
+    "        \n",
+    "for k, v in graph_dict.items():\n",
+    "    print(f\"{k} : {v}\")"
    ]
   }
  ],
