dbn_dijkstra_city.ipynb

--- a/dbn_dijkstra_city.ipynb
+++ b/dbn_dijkstra_city.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -15,13 +15,13 @@
    ],
    "source": [
     "input = open(\"data/dbn_dijkstra_city.txt\", \"r\")\n",
-    "n, m, c = input.readline().rstrip().split()\n",
+    "n, m, c = map(int, input.readline().rstrip().split())\n",
     "print(f\"n : {n},  m : {m},  c : {c}\")      # n : number of city,  m : number of edges,  c : start city number"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -43,6 +43,68 @@
     "        \n",
     "for k, v in graph_dict.items():\n",
     "    print(f\"{k} : {v}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "INF = int(1e9)\n",
+    "visited = [False] * (n+1)\n",
+    "distance = [INF] * (n+1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'3'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "can only concatenate str (not \"int\") to str",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32me:\\BAEKJOON_072723\\dbn_dijkstra_city.ipynb Cell 4\u001b[0m line \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_dijkstra_city.ipynb#W4sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m [INF] \u001b[39m*\u001b[39m (n\u001b[39m+\u001b[39;49m\u001b[39m1\u001b[39;49m)\n",
+      "\u001b[1;31mTypeError\u001b[0m: can only concatenate str (not \"int\") to str"
+     ]
+    }
+   ],
+   "source": [
+    "[INF] * (n+1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_smallest_node():\n",
+    "    min_value = "
    ]
   }
  ],
