--- a/dbn_dijkstra_city.ipynb
+++ b/dbn_dijkstra_city.ipynb
@@ -58,13 +58,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_smallest_node():\n",
-    "    min_value = "
+    "    min_value = INF\n",
+    "    index = 0\n",
+    "    for i in range(1, n+1):\n",
+    "        if distance[i] < min_value and not visited[i]:\n",
+    "            min_value = distance[i]\n",
+    "            index = i\n",
+    "    return index"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dijkstra(start):\n",
+    "    distance[start] = 0\n",
+    "    visited[start] = True\n",
+    "    \n",
+    "    for j in graph_dict[start]:\n",
+    "        distance[j[0]] = j[1]\n",
+    "        \n",
+    "    for _ in range(n-1):\n",
+    "        now = get_smallest_node()\n",
+    "        visited[now] = True\n",
+    "        \n",
+    "        if now not in graph_dict.keys():\n",
+    "            continue\n",
+    "        else:\n",
+    "            for j in graph_dict[now]:\n",
+    "                cost = distance[now] + j[1]\n",
+    "                if cost < distance[j[0]]:\n",
+    "                    distance[j[0]] = cost\n",
+    "    return distance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
