--- a/dbn_dijkstra_city.ipynb
+++ b/dbn_dijkstra_city.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "n : 3,  m : 2,  city_num : 1\n"
+      "n : 6,  m : 11,  city_num : 1\n"
      ]
     }
    ],
@@ -21,14 +21,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 : [(2, 4), (3, 2)]\n"
+      "5 : [(6, 2), (3, 1)]\n",
+      "4 : [(5, 1), (3, 3)]\n",
+      "3 : [(6, 5), (2, 3)]\n",
+      "1 : [(3, 5), (4, 1), (2, 2)]\n",
+      "2 : [(3, 3), (4, 2)]\n"
      ]
     }
    ],
@@ -47,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,15 +105,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1000000000, 0, 4, 2]\n",
-      "answer : 2\n"
+      "[1000000000, 0, 2, 5, 1, 2, 4]\n",
+      "answer : 5\n"
      ]
     }
    ],
@@ -118,28 +122,8 @@
     "shortest_paths = dijkstra(start)\n",
     "print(shortest_paths)\n",
     "\n",
-    "ans = min([i for i in shortest_paths if i > 0])\n",
+    "ans = max([i for i in shortest_paths[1:] if i > 0])\n",
     "print(f\"answer : {ans}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "c"
    ]
   }
  ],
