--- a/dbn_dijkstra_city.ipynb
+++ b/dbn_dijkstra_city.ipynb
@@ -20,6 +20,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### dijkstra using sequential search"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 66,
    "metadata": {},
