More on dbn_dijkstra_city.ipynb

--- a/dbn_dijkstra_city.ipynb
+++ b/dbn_dijkstra_city.ipynb
@@ -142,6 +142,45 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import heapq\n",
+    "import sys"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n : 6,  m : 11,  city_num : 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "input = open(\"data/dbn_dijkstra_city.txt\", \"r\")\n",
+    "n, m, city_num = map(int, input.readline().rstrip().split())\n",
+    "print(f\"n : {n},  m : {m},  city_num : {city_num}\")      # n : number of city,  m : number of edges,  c : start city number"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "INF = int(1e9)\n",
+    "distance = [INF] * (n+1)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
