More on dbn_dijkstra_city.ipynb

--- a/dbn_dijkstra_city.ipynb
+++ b/dbn_dijkstra_city.ipynb
@@ -171,20 +171,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "INF = int(1e9)\n",
-    "distance = [INF] * (n+1)"
+    "distance = [INF] * (n+1)\n",
+    "graph_dict = {}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 : [(6, 2), (3, 1)]\n",
+      "4 : [(5, 1), (3, 3)]\n",
+      "3 : [(6, 5), (2, 3)]\n",
+      "1 : [(3, 5), (4, 1), (2, 2)]\n",
+      "2 : [(3, 3), (4, 2)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in input.readlines():\n",
+    "    a, b, c = map(int, i.split())\n",
+    "    if a not in graph_dict.keys():\n",
+    "        graph_dict[a] = [(b, c)]\n",
+    "    else:\n",
+    "        graph_dict[a].append((b, c))\n",
+    "        \n",
+    "for k, v in graph_dict.items():\n",
+    "    print(f\"{k} : {v}\")"
+   ]
   }
  ],
  "metadata": {
