More on dbn_dijkstra_city.ipynb

--- a/dbn_dijkstra_city.ipynb
+++ b/dbn_dijkstra_city.ipynb
@@ -208,6 +208,18 @@
     "for k, v in graph_dict.items():\n",
     "    print(f\"{k} : {v}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"dijkstra_pq\"\"\"\n",
+    "def dijkstra_pq(start):\n",
+    "    q = []\n",
+    "    heapq.heappush(q, (0, start))         # start node로 가는 최단경로비용은 0이며 이거리와 start node를 tuple로 새롭게 만들어진 큐인 q에 삽입한다."
+   ]
   }
  ],
  "metadata": {
