More on dbn_dijkstra_city.ipynb

--- a/dbn_dijkstra_city.ipynb
+++ b/dbn_dijkstra_city.ipynb
@@ -218,7 +218,15 @@
     "\"\"\"dijkstra_pq\"\"\"\n",
     "def dijkstra_pq(start):\n",
     "    q = []\n",
-    "    heapq.heappush(q, (0, start))         # start node로 가는 최단경로비용은 0이며 이거리와 start node를 tuple로 새롭게 만들어진 큐인 q에 삽입한다."
+    "    heapq.heappush(q, (0, start))         # start node로 가는 최단경로비용은 0이며 이거리와 start node를 tuple로 새롭게 만들어진 큐인 q에 삽입한다.\n",
+    "    distance[start] = 0\n",
+    "    \n",
+    "    while q:                              # 큐가 빌 때까지 계속 반복한다.\n",
+    "        dist, now = heapq.heappop(q)\n",
+    "        if distance[now] < dist:          # 현재노드인 now가 이미 처리된적이 있다면 이조건을 충족할거고, 이경우 무시하고 다음번 원소를 큐에서 꺼낸다.\n",
+    "            continue\n",
+    "        for i in graph_dict[now]:\n",
+    "            "
    ]
   }
  ],
