--- a/dbn_dijkstra_city.ipynb
+++ b/dbn_dijkstra_city.ipynb
@@ -226,7 +226,10 @@
     "        if distance[now] < dist:          # 현재노드인 now가 이미 처리된적이 있다면 이조건을 충족할거고, 이경우 무시하고 다음번 원소를 큐에서 꺼낸다.\n",
     "            continue\n",
     "        for i in graph_dict[now]:\n",
-    "            "
+    "            cost = dist + i[1]\n",
+    "            if cost < distance[i[0]]:\n",
+    "                distance[i[0]] = cost\n",
+    "                heapq.heappush(q, (cost, i[0]))"
    ]
   }
  ],
