More on dbn_dijkstra_city.ipynb

--- a/dbn_dijkstra_city.ipynb
+++ b/dbn_dijkstra_city.ipynb
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +229,8 @@
     "            cost = dist + i[1]\n",
     "            if cost < distance[i[0]]:\n",
     "                distance[i[0]] = cost\n",
-    "                heapq.heappush(q, (cost, i[0]))"
+    "                heapq.heappush(q, (cost, i[0]))\n",
+    "    return distance"
    ]
   }
  ],
