More on dbn_dijkstra_city.ipynb

--- a/dbn_dijkstra_city.ipynb
+++ b/dbn_dijkstra_city.ipynb
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +223,7 @@
     "    \n",
     "    while q:                              # 큐가 빌 때까지 계속 반복한다.\n",
     "        dist, now = heapq.heappop(q)\n",
-    "        if distance[now] < dist:          # 현재노드인 now가 이미 처리된적이 있다면 이조건을 충족할거고, 이경우 무시하고 다음번 원소를 큐에서 꺼낸다.\n",
+    "        if distance[now] < dist or now not in graph_dict.keys():          # 현재노드인 now가 이미 처리된적이 있다면 이조건을 충족할거고, 이경우 무시하고 다음번 원소를 큐에서 꺼낸다.\n",
     "            continue\n",
     "        for i in graph_dict[now]:\n",
     "            cost = dist + i[1]\n",
@@ -231,6 +231,29 @@
     "                distance[i[0]] = cost\n",
     "                heapq.heappush(q, (cost, i[0]))\n",
     "    return distance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1000000000, 0, 2, 3, 1, 2, 4]\n",
+      "answer : 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "start = city_num\n",
+    "shortest_paths = dijkstra_pq(start)\n",
+    "print(shortest_paths)\n",
+    "\n",
+    "ans = max([i for i in shortest_paths[1:] if i > 0])\n",
+    "print(f\"answer : {ans}\")"
    ]
   }
  ],
