--- a/dbn_dijkstra_city.ipynb
+++ b/dbn_dijkstra_city.ipynb
@@ -265,10 +265,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n : 6,   m : 11\n"
+     ]
+    }
+   ],
+   "source": [
+    "input = open(\"data/dbn_dijkstra_city_floyd_warshall.txt\", \"r\")\n",
+    "n, m = map(int, input.readline().rstrip().split())\n",
+    "print(f\"n : {n},   m : {m}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "INF = int(1e9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1000000000, 1000000000, 1000000000, 1000000000, 1000000000, 1000000000, 1000000000]\n",
+      "[1000000000, 0, 2, 5, 1, 1000000000, 1000000000]\n",
+      "[1000000000, 1000000000, 0, 3, 2, 1000000000, 1000000000]\n",
+      "[1000000000, 1000000000, 3, 0, 1000000000, 1000000000, 5]\n",
+      "[1000000000, 1000000000, 1000000000, 3, 0, 1, 1000000000]\n",
+      "[1000000000, 1000000000, 1000000000, 1, 1000000000, 0, 2]\n",
+      "[1000000000, 1000000000, 1000000000, 1000000000, 1000000000, 1000000000, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "graph = [[INF] * (n+1) for _ in range(n+1)]\n",
+    "\n",
+    "for a in range(1, n+1):\n",
+    "    for b in range(1, n+1):\n",
+    "        if a == b:\n",
+    "            graph[a][b] = 0\n",
+    "            \n",
+    "for _ in range(m):\n",
+    "    a, b, c = map(int, input.readline().rstrip().split())\n",
+    "    graph[a][b] = c\n",
+    "    \n",
+    "for row in graph:\n",
+    "    print(row)"
+   ]
   }
  ],
  "metadata": {
