More on dbn_dijkstra_city.ipynb

--- a/dbn_dijkstra_city.ipynb
+++ b/dbn_dijkstra_city.ipynb
@@ -284,11 +284,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1000000000\n"
+     ]
+    }
+   ],
    "source": [
-    "INF = int(1e9)"
+    "INF = int(float(1e9))\n",
+    "print(INF)"
    ]
   },
   {
@@ -324,6 +333,24 @@
     "    \n",
     "for row in graph:\n",
     "    print(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.000000e+09\n"
+     ]
+    }
+   ],
+   "source": [
+    "scientific_notation = \"{:e}\".format(1e9)\n",
+    "print(scientific_notation)"
    ]
   }
  ],
