--- a/dbn_dijkstra_city.ipynb
+++ b/dbn_dijkstra_city.ipynb
@@ -352,6 +352,19 @@
     "scientific_notation = \"{:e}\".format(1e9)\n",
     "print(scientific_notation)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"recurrence relation에 따라 Floyd Warshall을 수행한다.\"\"\"\n",
+    "for k in range(1, n+1):\n",
+    "    for a in range(1, n+1):\n",
+    "        for b in range(1, n+1):\n",
+    "            graph[a][b] = min(graph[a][b], graph[a][k] + graph[k][b])"
+   ]
   }
  ],
  "metadata": {
