More on dbn_dijkstra_city.ipynb

--- a/dbn_dijkstra_city.ipynb
+++ b/dbn_dijkstra_city.ipynb
@@ -365,6 +365,35 @@
     "        for b in range(1, n+1):\n",
     "            graph[a][b] = min(graph[a][b], graph[a][k] + graph[k][b])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 2 3 1 2 4 \n",
+      "INF 0 3 2 3 5 \n",
+      "INF 3 0 5 6 5 \n",
+      "INF 5 2 0 1 3 \n",
+      "INF 4 1 6 0 2 \n",
+      "INF INF INF INF INF 0 \n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"수행된 결과를 출력한다.\"\"\"\n",
+    "for a in range(1, n+1):\n",
+    "    for b in range(1, n+1):\n",
+    "        if graph[a][b] == INF:\n",
+    "            print(\"INF\", end=\" \")\n",
+    "        else:\n",
+    "            print(graph[a][b], end=\" \")\n",
+    "    print()"
+   ]
   }
  ],
  "metadata": {
