--- a/dbn_dijkstra_city.ipynb
+++ b/dbn_dijkstra_city.ipynb
@@ -394,6 +394,39 @@
     "            print(graph[a][b], end=\" \")\n",
     "    print()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 문제풀이 : 양방향 & 소개팅"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n : 5,  m : 7\n"
+     ]
+    }
+   ],
+   "source": [
+    "input = open(\"data/dbn_dijkstra_floyd_warshall.txt\", \"r\")\n",
+    "n, m = map(int, input.readline().rstrip().split())\n",
+    "print(f\"n : {n},  m : {m}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
